bug fixes, start to connection pool updates (breaking code)
